<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Siempo</string>
    <string name="title_text" tools:ignore="UnusedResources">Text</string>
    <string name="title_note" tools:ignore="UnusedResources">Note</string>
    <string name="title_callLog" tools:ignore="UnusedResources">Call Log</string>
    <string name="title_voicemail" tools:ignore="UnusedResources">Voicemail</string>
    <string name="title_theme" tools:ignore="UnusedResources">Theme</string>
    <string name="pinch_hint" >Pinch-to-zoom to adjust the wallpaper</string>
    <string name="double_tap_hint">You can also double-tap to zoom</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="title_suppressedNotifications">View Suppressed Notification</string>
    <string name="title_siempoPermissions">Siempo Permissions</string>
    <string name="title_siempoRestrictions">Restrictions</string>
    <string name="title_siempoLocation">Location</string>
    <string name="title_inbox" tools:ignore="UnusedResources">Google Inbox</string>
    <string name="title_defaultLauncher">Set default home app</string>
    <string name="title_tracking" tools:ignore="UnusedResources">Tracking</string>
    <string name="title_version">Version: %1$s</string>
    <string name="title_defaultapp">Assign app defaults</string>
    <string name="title_apps">Apps</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_mindfulMorningAlarm" tools:ignore="UnusedResources">Mindful Morning Alarm</string>
    <string name="title_sendAsSMS">Send as a message</string>
    <string name="title_saveNote">Save as a note</string>
    <string name="title_swipe">Swipe right to show flagged apps</string>
    <string name="label_multiple_numbers">Multiple numbers</string>
    <string name="string_notification_title">Control notifications</string>
    <string name="string_account_title">Account</string>
    <string name="string_account_service_title">"Account &amp; services"</string>
    <string name="string_update_email_title">Update email</string>
    <string name="hello_blank_fragment" tools:ignore="UnusedResources">Hello blank fragment</string>
    <string name="title_activity_installed_app_list">Installed App List </string>
    <string name="msg_notificationEmpty">Nothing new. Feel free to take a breath and look at your surroundings.</string>
    <string name="nointernetconnection">No internet connection available</string>
    <string name="pref_header_general" tools:ignore="UnusedResources">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync" tools:ignore="UnusedResources">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries" tools:ignore="UnusedResources">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values" tools:ignore="UnusedResources">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" tools:ignore="UnusedResources" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications" tools:ignore="UnusedResources">Notifications</string>
    <string name="lock_screen_label">SiempoLockScreeen</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="connections_key">connections_screen</string>
    <string name="connections_summary">Custom Settings</string>
    <string name="connections_title">Settings</string>
    <string name="pref_connection">Wireless and Connections</string>
    <string name="pref_wifi_title">Wi-Fi</string>
    <string name="wifi_key">key_wifi</string>
    <string name="bluetooth_key">key_bluetooth</string>
    <string name="wireless_key">key_wireless</string>
    <string name="pref_bluetooth">Bluetooth</string>
    <string name="data_usage_key">data_usage</string>
    <string name="pref_data_usage">Data Usage</string>
    <string name="wireless_and_network">More</string>
    <string name="device_settings_key">key_device</string>
    <string name="device_settings_summary">Device Related Settings</string>
    <string name="device_settings_title">Device</string>
    <string name="pref_home">Home</string>
    <string name="home_key">key_home</string>
    <string name="display_key">key_display</string>
    <string name="sound_key">key_sound</string>
    <string name="apps_key">key_apps</string>
    <string name="memory_card_setting_key">key_memory_card_setting</string>
    <string name="pref_display">Display</string>
    <string name="pref_device">Device</string>
    <string name="pref_notification">Sound and Notification</string>
    <string name="pref_apps">Apps</string>
    <string name="pref_storage_usb">Storage and USB</string>
    <string name="pref_battery">Battery</string>
    <string name="pref_memory">Memory</string>
    <string name="pref_users">Users</string>
    <string name="pref_tap_pay">Tap and Pay</string>
    <string name="key_battery">key_battery</string>
    <string name="key_tap_pay">key_tap_pay</string>
    <string name="key_user_setting">key_user_setting</string>
    <string name="key_memory">key_process_usage</string>
    <string name="personal_settings_key">key_personal</string>
    <string name="personal_settings_summary">Personal Settings</string>
    <string name="personal_settings_title">Personal</string>
    <string name="pref_location">Location</string>
    <string name="location_key">key_location</string>
    <string name="security_key">key_security</string>
    <string name="account_key">key_account</string>
    <string name="location_settings_summary">Location Settings</string>
    <string name="pref_security">Security</string>
    <string name="pref_accounts">Accounts</string>
    <string name="pref_language_input"><![CDATA[Language & input]]></string>
    <string name="pref_backup_reset"><![CDATA[Backup & reset]]></string>
    <string name="pref_personal">Personal</string>
    <string name="pref_language_key">key_pref_language_input</string>
    <string name="backup_key">key_backup</string>
    <string name="system_settings_key">key_system_settings</string>
    <string name="system_settings_summary">Systen Settings</string>
    <string name="system_settings_title">System</string>
    <string name="pref_date_time"><![CDATA[Date & time]]></string>
    <string name="date_time_key">key_date_time</string>
    <string name="accessibility_key">key_accessibility</string>
    <string name="print_key">key_print</string>
    <string name="about_key">key_aboutphone</string>
    <string name="date_time_settings_summary">Date and time</string>
    <string name="pref_accessibility">Accessibility</string>
    <string name="pref_printing">Printing</string>
    <string name="pref_about_phone">About phone</string>
    <string name="pref_system">System</string>
    <string name="str_phonesettings">Phone Settings</string>
    <string name="str_siemposettings">Siempo Settings</string>
    <string name="str_keyboard_configuration">Always show the keyboard on the \nhome screen</string>
    <string name="phone_replace_regex">\-</string>
    <string name="missed_call">Missed call</string>
    <string name="phone">Phone</string>
    <string name="msg_noti_service_dialog">Siempo Notification service is not enabled. Please allow Siempo to access notification service</string>
    <string name="msg_overlay_settings">Siempo needs overlay permission enabled mandatorily.</string>
    <string name="open_with">Open With</string>
    <string name="just_once">Just Once</string>
    <string name="always">Always</string>
    <string name="okay">Okay</string>
    <string name="default_apps">Default Apps</string>
    <string name="clear_all">Clear All</string>
    <string name="siempo_note">Siempo Note</string>
    <string-array name="systemAppList">
        <item>com.android.providers.contacts</item>
        <item>com.android.phone</item>
    </string-array>
    <string name="please_select_application">Please select application.</string>
    <string name="loading_msg">Loading....</string>
    <string name="no_emailapp_msg">No email application found in your phone</string>
    <string name="app_not_found">Application not found</string>
    <string name="suppressed_notifications">Suppressed Notifications</string>
    <string name="search_app">Search App</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="beta">beta</string>
    <string name="alpha">alpha</string>
    <string name="huawei_limitation">This feature is not supported in Huawei devices.</string>
    <string name="tempo">Tempo</string>
    <string name="help">Help</string>
    <string name="contact_permission">Contacts</string>
    <string name="call_permission">Telephone</string>
    <string name="sms_permission">SMS</string>
    <string name="storage_permission">Storage</string>
    <string name="location_permission">Location</string>
    <string name="notificationAccess">Notification access</string>
    <string name="draw_overlay">Draw over other Apps</string>
    <string name="permission_title">"Please enable the following permission(s) to allow the Siempo to work correctly:"</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_next">Next</string>
    <string name="home_screen">Customize appearance</string>
    <string name="account">Account</string>
    <string name="alpha_settings">Alpha settings</string>
    <string name="faq">View FAQ</string>
    <string name="privacy_policyy">View Privacy Policy</string>
    <string name="feedback">Send Feedback</string>
    <string name="version">Version</string>
    <string name="app_menus">Reduce app usage</string>
    <string name="welcome_to_tool">Welcome to healthier app menus!</string>
    <string name="from_this_tools">"From this <b>Tools Screen</b>, you can launch your most helpful apps.  Assign your preferred app to each tool.  Add, change, or rearrange tools as desired."</string>
    <string name="favorite_message">You can add any other non-distracting apps to this screen by long-pressing on an icon.</string>
    <string name="flagged_message">"Here you'll find any apps that you have flagged for less use.  By default, Siempo scrambles the app positions each time you enter this screen."</string>
</resources>