<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
   >

    <!--<android.support.design.widget.AppBarLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:theme="@style/AppTheme.AppBarOverlay">-->

        <!--<android.support.v7.widget.Toolbar-->
            <!--android:id="@+id/toolbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="?attr/actionBarSize"-->
            <!--android:background="?attr/colorPrimary"-->
            <!--app:popupTheme="@style/AppTheme.PopupOverlay" />-->

    <!--</android.support.design.widget.AppBarLayout>-->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:padding="@dimen/margin.4"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/txtPermissionLabel"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/permission_title" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin.3"
            android:stretchColumns="0">

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_permission"
                    android:textSize="@dimen/text.size.large" />

                <Switch
                    android:id="@+id/switchContactPermission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>
            <TableRow android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/call_permission"
                    android:textSize="@dimen/text.size.large" />

                <Switch
                    android:id="@+id/switchCallPermission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>
            <TableRow android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sms_permission"
                    android:textSize="@dimen/text.size.large" />

                <Switch
                    android:id="@+id/switchSmsPermission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>
            <TableRow android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/video_permission"
                    android:textSize="@dimen/text.size.large" />

                <Switch
                    android:id="@+id/switchCameraPermission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>
            <TableRow android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/storage_permission"
                    android:textSize="@dimen/text.size.large" />

                <Switch
                    android:id="@+id/switchFilePermission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:id="@+id/tblLocation"
                android:visibility="gone"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location_permission"
                    android:textSize="@dimen/text.size.large" />



            </TableRow>


            <TableRow android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notificationAccess"
                    android:textSize="@dimen/text.size.large" />

                <Switch
                    android:id="@+id/switchNotificationAccess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>


            <TableRow android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/draw_overlay"
                    android:textSize="@dimen/text.size.large" />

                <Switch
                    android:id="@+id/switchOverlayAccess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>



        </TableLayout>

        <Button
            android:text="@string/btn_continue"
            android:id="@+id/btnContinue"
            android:padding="16dp"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>