<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pause"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_bg"
    android:orientation="vertical"
    tools:context="co.siempo.phone.pause.PauseActivity"
    tools:ignore="UnusedIds">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_bg"
        android:elevation="@dimen/dp_5"
        android:minHeight="?android:attr/actionBarSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/relHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginLeft="5dp">
            <TextView
                android:id="@+id/txtHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_screen"
                android:layout_marginLeft="50dp"
                android:textSize="@dimen/text.size.large" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/relAppMenus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginLeft="5dp">

            <TextView
                android:id="@+id/txtAppMenus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_menus"
                android:layout_marginLeft="50dp"
                android:textSize="@dimen/text.size.large" />

        </LinearLayout>




        <LinearLayout
            android:id="@+id/relNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginLeft="5dp">
            <TextView
                android:id="@+id/txtNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/string_notification_title"
                android:textSize="@dimen/text.size.large" />
        </LinearLayout>




        <LinearLayout
            android:id="@+id/relAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginLeft="5dp">

        <TextView
            android:id="@+id/txtAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/account"
            android:textSize="@dimen/text.size.large" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/relAppAlphaSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginLeft="5dp">
        <TextView
            android:id="@+id/txtAlphaSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/alpha_settings"
            android:textSize="@dimen/text.size.large" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
