<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pause"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="co.siempo.phone.pause.PauseActivity"
    tools:ignore="UnusedIds">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?android:attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="@dimen/dp_5"/>


    <TextView
        android:id="@+id/txtFaq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        android:padding="8dp"
        android:text="@string/faq"
        android:textSize="@dimen/text.size.large" />


    <TextView
        android:id="@+id/txtPrivacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        android:padding="8dp"
        android:text="@string/privacy_policyy"
        android:textSize="@dimen/text.size.large" />


    <TextView
        android:id="@+id/txtSendFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        android:padding="8dp"
        android:text="@string/feedback"
        android:textSize="@dimen/text.size.large" />


    <TextView
        android:id="@+id/txtVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        android:padding="8dp"
        android:text="@string/version"
        android:textSize="@dimen/text.size.large" />


    <TextView
        android:id="@+id/txtVersionValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="16dp"
        android:text=""
        android:textSize="@dimen/text.size.regular" />


</LinearLayout>
