<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_5"
                android:background="@color/transparent"
                android:orientation="vertical"
    >


    <android.support.v7.widget.CardView
        android:id="@+id/cardTools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_5"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"
        android:background="#F7F7F7"
        android:elevation="@dimen/dp_5"
        android:minHeight="210dp"
        app:cardCornerRadius="@dimen/dp_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <co.siempo.phone.customviews.RobotoRegularTextView
                    android:id="@+id/txtToolsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_5"
                    android:gravity="left"
                    android:padding="@dimen/dp_5"
                    android:text="@string/welcome_to_tool"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:visibility="visible"/>


                <ViewFlipper
                    android:id="@+id/viewFlipperTour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_2"
                    android:layout_marginTop="@dimen/dp_2">

                    <co.siempo.phone.customviews.RobotoRegularTextView
                        android:id="@+id/txtToolsMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:lineSpacingExtra="4sp"
                        android:paddingLeft="@dimen/dp_16"
                        android:paddingRight="@dimen/dp_5"
                        android:text="@string/from_this_tools"
                        android:textColor="#8A000000"
                        android:textSize="16sp"
                        android:visibility="visible"/>

                    <co.siempo.phone.customviews.RobotoRegularTextView
                        android:id="@+id/txtFavoriteMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:lineSpacingExtra="4sp"
                        android:paddingLeft="@dimen/dp_16"
                        android:paddingRight="@dimen/dp_5"
                        android:text="@string/favorite_message"
                        android:textColor="#8A000000"
                        android:textSize="16sp"
                        android:visibility="visible"/>


                    <co.siempo.phone.customviews.RobotoRegularTextView
                        android:id="@+id/txtJunkMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:lineSpacingExtra="4sp"
                        android:paddingLeft="@dimen/dp_16"
                        android:paddingRight="@dimen/dp_5"
                        android:text="@string/flagged_message"
                        android:textColor="#8A000000"
                        android:textSize="16sp"
                        android:visibility="visible"/>


                </ViewFlipper>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10">


                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/button_next_bg"
                    android:elevation="@dimen/dp_10"
                    android:text="@string/btn_next"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>

                <co.siempo.phone.customviews.RobotoRegularTextView
                    android:id="@+id/txtNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/btnNext"
                    android:layout_alignParentRight="true"
                    android:paddingLeft="@dimen/dp_16"
                    android:paddingRight="@dimen/dp_5"
                    android:text="1 of 3"
                    android:textColor="#C2C2C2"
                    android:textSize="14sp"/>

            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>
